# cpp-video-parallel-processing

./: CMakeLists.txt  PRSVideoObrada.cpp  README.md
